# rust-cqrs-es-demo

./: README.md  docker-compose.yml
.github/workflows/: ci.yaml
backend/: Cargo.toml  Dockerfile  migrate.sh
backend/db/migrations/: 0001_init.down.sql  0001_init.up.sql
backend/src/: lib.rs  main.rs
backend/src/config/: cqrs.rs  database.rs  mod.rs
backend/src/domain/project/: aggregate.rs  commands.rs  events.rs  mod.rs  queries.rs  route_handler.rs  services.rs  view.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Alert.tsx  CreateProjectModal.tsx  Modal.tsx  ProjectList.tsx  SelectProjects.tsx
frontend/components/inputs/: DateInput.tsx  Input.tsx
frontend/components/layout/: PageWithHeader.tsx
frontend/config/: config.ts
frontend/hooks/: useAlert.tsx  useQueryClient.tsx
frontend/mutations/: projectMutation.ts  queryKeys.ts
